--- a/RAPSys/Views/LandManagement/LacList.cshtml
+++ b/RAPSys/Views/LandManagement/LacList.cshtml
@@ -122,31 +122,31 @@
                         <label for="firstName" class="col-md-4 form-control-label text-md-right">First Name</label>
                         <div class="col-md-8">
                             <input type="hidden" id="PersonId" class="form-control reset" data-placement="top" placeholder="First Name">
-                            <input type="text" id="firstName" class="form-control" data-placement="top" placeholder="Add here the First Name..">
+                            <input type="text" id="firstName" class="form-control reset" data-placement="top" placeholder="Add here the First Name..">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="lastName" class="col-md-4 form-control-label text-md-right">Last Name</label>
                         <div class="col-md-8">
-                            <input type="text" id="lastName" class="form-control" data-placement="top" placeholder="Add here the Last Name..">
+                            <input type="text" id="lastName" class="form-control reset" data-placement="top" placeholder="Add here the Last Name..">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="middleName" class="col-md-4 form-control-label text-md-right">Middle Name</label>
                         <div class="col-md-8">
-                            <input type="text" id="middleName" class="form-control" data-placement="top" placeholder="Add here the Middle Name..">
+                            <input type="text" id="middleName" class="form-control reset" data-placement="top" placeholder="Add here the Middle Name..">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="primaryResidence" class="col-md-4 form-control-label text-md-right">Primary Residence</label>
                         <div class="col-md-8">
-                            <input type="text" class="form-control" id="primaryResidence" data-placement="top" placeholder="Primary Residence" />
+                            <input type="text" class="form-control reset" id="primaryResidence" data-placement="top" placeholder="Primary Residence" />
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="pictureID" class="col-md-4 form-control-label text-md-right">Picture ID</label>
                         <div class="col-md-8">
-                            <input type="text" id="pictureID" class="form-control" data-placement="top" placeholder="Picture ID">
+                            <input type="text" id="pictureID" class="form-control reset" data-placement="top" placeholder="Picture ID">
                         </div>
                     </div>
                     <div class="form-group row" id="divPAPPhoto">
@@ -159,7 +159,7 @@
                     <div class="form-group row">
                         <label for="fileID" class="col-md-4 form-control-label text-md-right">File ID</label>
                         <div class="col-md-8">
-                            <input type="text" id="fileID" class="form-control" data-placement="top" placeholder="File ID">
+                            <input type="text" id="fileID" class="form-control reset" data-placement="top" placeholder="File ID">
                         </div>
                     </div>
                 </div>
@@ -207,7 +207,7 @@
                         <div class="col-md-5">
                             <label class="form-control" for="ownershipType" style="visibility:hidden"> </label>
                             <label> <input id="ownershipType" type="radio" name="owner" value="U" /> Is User</label>
-                            <label> <input id="ownershipType" type="radio" name="owner" value="P" /> is Owner</label>
+                            <label> <input id="ownershipType" type="radio" name="owner" value="P" /> Is Owner</label>
                         </div>
                     </div>
 
@@ -233,7 +233,7 @@
                         <div class="form-group row">
                             <div class="col-md-6">
                                 <label>Primary Residence</label>
-                                <input type="text" class="form-control" id="ownerPrimaryResidence" data-placement="top" placeholder="Primary Residence" />
+                                <input type="text" class="form-control reset" id="ownerPrimaryResidence" data-placement="top" placeholder="Primary Residence" />
                             </div>
                             <div class="col-md-3">
                                 <label>Photo ID</label>
